--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/stranamam
 spring.datasource.username=postgres
 spring.datasource.password=1112
+#spring.datasource.url=jdbc:postgresql://localhost:5432/studs
+#spring.datasource.username=s335133
+#spring.datasource.password=PnqgdN9NcodqZk6b
