--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,13 @@ spring.datasource.password=1112
 #spring.datasource.url=jdbc:postgresql://localhost:5432/studs
 #spring.datasource.username=s335133
 #spring.datasource.password=PnqgdN9NcodqZk6b
+
+spring.security.user.name=egor
+spring.security.user.password=1234
+
+
+logging.level.bitronix= DEBUG
+
+bitronix.tm.serverId=myapp
+bitronix.tm.logPart1Filename=bitronix1.log
+bitronix.tm.logPart2Filename=bitronix2.log
