--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.security.user.name=egor
 spring.security.user.password=1234
 
 
-logging.level.bitronix= DEBUG
+logging.level.bitronix=INFO
 
 bitronix.tm.serverId=myapp
 bitronix.tm.logPart1Filename=bitronix1.log
