--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,13 @@
 			<artifactId>spring-boot-starter-jta-bitronix</artifactId>
 			<version>2.4.13</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>6.1.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
