--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,6 @@
+spring.profiles.active=dev
+
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/stranamam
-spring.datasource.username=postgres
-spring.datasource.password=1112
-#spring.datasource.url=jdbc:postgresql://localhost:5432/studs
-#spring.datasource.username=s335133
-#spring.datasource.password=PnqgdN9NcodqZk6b
 
 spring.security.user.name=egor
 spring.security.user.password=1234
