--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,6 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<scope>runtime</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -71,22 +70,35 @@
             <artifactId>spring-security-crypto</artifactId>
             <version>6.2.1</version>
         </dependency>
-		<dependency>
-			<groupId>javax.transaction</groupId>
-			<artifactId>javax.transaction-api</artifactId>
-			<version>1.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-jta-bitronix</artifactId>
-			<version>2.4.13</version>
-		</dependency>
 
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
 			<version>6.1.0</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.atomikos</groupId>
+			<artifactId>transactions-spring-boot3-starter</artifactId>
+			<version>6.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>jta</artifactId>
+			<version>1.1</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jms</artifactId>
+			<version>6.1.6</version>
+		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>org.amqphub.spring</groupId>-->
+<!--			<artifactId>amqp-10-jms-spring-boot-starter</artifactId>-->
+<!--			<version>3.1.6</version>-->
+<!--		</dependency>-->
 
 	</dependencies>
 
