--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,21 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.security.user.name=egor
 spring.security.user.password=1234
+server.port=8080
 
 logging.level.org.springframework.web=debug
 logging.level.org.springframework.security=debug
+logging.level.org.springframework.amqp=DEBUG
+
+amqphub.amqp10jms.remote-url=amqp://127.0.0.1:5672/
+amqphub.amqp10jms.username=user
+amqphub.amqp10jms.password=1112
+
+#spring.rabbitmq.username=user
+#spring.rabbitmq.password=1112
+#spring.rabbitmq.host=localhost
+#spring.rabbitmq.port=5672
+#spring.rabbitmq.virtual-host=vkek
+spring.rabbitmq.queue.name=kekQueue
+spring.rabbitmq.exchange.name=testExchange
+spring.rabbitmq.routing-key.name=kekKey
