--- a/pom.xml
+++ b/pom.xml
@@ -94,11 +94,20 @@
 			<artifactId>spring-jms</artifactId>
 			<version>6.1.6</version>
 		</dependency>
-<!--		<dependency>-->
-<!--			<groupId>org.amqphub.spring</groupId>-->
-<!--			<artifactId>amqp-10-jms-spring-boot-starter</artifactId>-->
-<!--			<version>3.1.6</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>org.amqphub.spring</groupId>
+			<artifactId>amqp-10-jms-spring-boot-starter</artifactId>
+			<version>3.1.6</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>3.0.0</version>
+		</dependency>
 
 	</dependencies>
 
