--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/stranamam
 spring.datasource.username=postgres
 spring.datasource.password=1112
+spring.datasource.url2=jdbc:postgresql://localhost:5432/logstranamam
