--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,19 +6,24 @@ spring.security.user.name=egor
 spring.security.user.password=1234
 server.port=8080
 
-logging.level.org.springframework.web=debug
-logging.level.org.springframework.security=debug
-logging.level.org.springframework.amqp=DEBUG
+#logging.level.org.springframework.web=debug
+#logging.level.org.springframework.security=debug
+#logging.level.org.springframework.amqp=DEBUG
+atomikos.properties.enable-logging=true
 
 amqphub.amqp10jms.remote-url=amqp://127.0.0.1:5672/
 amqphub.amqp10jms.username=user
 amqphub.amqp10jms.password=1112
+
+spring.quartz.job-store-type=memory
 
 #spring.rabbitmq.username=user
 #spring.rabbitmq.password=1112
 #spring.rabbitmq.host=localhost
 #spring.rabbitmq.port=5672
 #spring.rabbitmq.virtual-host=vkek
-spring.rabbitmq.queue.name=kekQueue
-spring.rabbitmq.exchange.name=testExchange
-spring.rabbitmq.routing-key.name=kekKey
+#
+#spring.rabbitmq.queue.name=kekQueue
+#spring.rabbitmq.exchange.name=testExchange
+#spring.rabbitmq.routing-key.name=kekKey
+
